force-app/main/default/objects/CustomClearance__c/CustomClearance__c.object-meta.xml
<CustomObject>
    <label>Custom Clearance</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Custom Clearance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Clearance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>