force-app/main/default/objects/CustomClearance__c/fields/ApplicationDeclarationNo__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDeclarationNo__c</fullName>
    <label>Application Declaration No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>