force-app/main/default/objects/CustomClearance__c/fields/ApplicationDescription__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDescription__c</fullName>
    <label>Application Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>