force-app/main/default/objects/CustomClearance__c/fields/CustomsClearanceBroker__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearanceBroker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customs Clearance Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Clearance</relationshipLabel>
    <relationshipName>Custom_Clearance</relationshipName>
    <type>Lookup</type>
</CustomField>