force-app/main/default/objects/CustomClearance__c/fields/CustomsClearancePermitDate__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearancePermitDate__c</fullName>
    <label>Customs Clearance Permit Date</label>
    <type>Date</type>
</CustomField>