force-app/main/default/objects/CustomClearance__c/fields/CustomsClearanceStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearanceStatus__c</fullName>
    <label>Customs Clearance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application for Customs Clearance</fullName>
            </value>
            <value>
                <fullName>Customs Examination</fullName>
            </value>
            <value>
                <fullName>Customs Declared</fullName>
            </value>
            <value>
                <fullName>Customs Inspection-Document</fullName>
            </value>
            <value>
                <fullName>Customs Inspection-Cargo</fullName>
            </value>
            <value>
                <fullName>Customs Permitted;Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>