force-app/main/default/objects/CustomClearance__c/fields/CustomsClearanceSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearanceSubmissionDate__c</fullName>
    <label>Customs Clearance Submission Date</label>
    <type>Date</type>
</CustomField>