force-app/main/default/objects/CustomClearance__c/fields/CustomsJudgment__c.field-meta.xml
<CustomField>
    <fullName>CustomsJudgment__c</fullName>
    <label>Customs Judgment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No inspection</fullName>
            </value>
            <value>
                <fullName>Documents Inspection</fullName>
            </value>
            <value>
                <fullName>Inspection(such as X-ray, check a sample, check all cargo)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>