force-app/main/default/objects/CustomClearance__c/fields/DeclarationType__c.field-meta.xml
<CustomField>
    <fullName>DeclarationType__c</fullName>
    <label>Declaration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declaration for Import Processing</fullName>
            </value>
            <value>
                <fullName>Declaration for Export Processing</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>