force-app/main/default/objects/CustomClearance__c/fields/HouseShipment__c.field-meta.xml
<CustomField>
    <fullName>HouseShipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>House Shipment</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipLabel>Custom Clearance</relationshipLabel>
    <relationshipName>Custom_Clearance</relationshipName>
    <type>Lookup</type>
</CustomField>