force-app/main/default/objects/CustomClearance__c/fields/InvoiceCurrency__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCurrency__c</fullName>
    <label>Invoice Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VND</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>