force-app/main/default/objects/CustomClearance__c/fields/MasterShipment__c.field-meta.xml
<CustomField>
    <fullName>MasterShipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Shipment</label>
    <referenceTo>AdvancedShipment__c</referenceTo>
    <relationshipLabel>Custom Clearance</relationshipLabel>
    <relationshipName>Custom_Clearance</relationshipName>
    <type>Lookup</type>
</CustomField>