force-app/main/default/objects/CustomClearance__c/fields/PICofCustomsClearanceBroker__c.field-meta.xml
<CustomField>
    <fullName>PICofCustomsClearanceBroker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC of Customs Clearance Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.CustomsClearanceBroker__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Custom Clearance</relationshipLabel>
    <relationshipName>Custom_Clearance</relationshipName>
    <type>Lookup</type>
</CustomField>