force-app/main/default/objects/CustomClearance__c/fields/PlaceofClearance__c.field-meta.xml
<CustomField>
    <fullName>PlaceofClearance__c</fullName>
    <label>Place of Clearance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>