force-app/main/default/objects/CustomClearance__c/fields/PlaceofOrigin__c.field-meta.xml
<CustomField>
    <fullName>PlaceofOrigin__c</fullName>
    <label>Place of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vietnam</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>