force-app/main/default/objects/CustomClearance__c/fields/TaxPaymentType__c.field-meta.xml
<CustomField>
    <fullName>TaxPaymentType__c</fullName>
    <label>Tax Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Payment by Our company</fullName>
            </value>
            <value>
                <fullName>Direct Payment</fullName>
            </value>
            <value>
                <fullName>Deferred Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>